docs: add detailed markdown documentation and project decisions to EDA notebook

--- a/notebooks/01_exploratory_analysis.ipynb
+++ b/notebooks/01_exploratory_analysis.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8046de01-5b1f-433f-ac65-340b77a15410",
+   "metadata": {},
+   "source": [
+    "# Análise Exploratória e Preditiva de Dados - Desafio\n",
+    "\n",
+    "## 1. Introdução\n",
+    "\n",
+    "Este notebook apresenta a análise exploratória do dataset `dados_desafio.xlsx`, com o objetivo de compreender a estrutura dos dados, identificar padrões, possíveis problemas e preparar o caminho para etapas futuras de modelagem"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "64e77fa7-0a28-41ac-aa4a-1d47d89edea7",
@@ -20,6 +32,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "219be1c2-19a6-442a-ae5b-03f9dc08d15c",
+   "metadata": {},
+   "source": [
+    "## 2. Carregamento dos Dados\n",
+    "\n",
+    "Os dados foram carregados a partir de um arquivo Excel utilizando a biblioteca `pandas`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "1e52abe9-3cff-40ef-b53f-1eb2ec07391e",
@@ -27,6 +49,14 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel(\"../data/dados_desafio.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36cb82e8-036f-4a18-a901-341bc23908fd",
+   "metadata": {},
+   "source": [
+    "## 3. Análise Inicial"
    ]
   },
   {
@@ -695,6 +725,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5f2d4ae-27ec-469a-bc59-5cad31a1d1ea",
+   "metadata": {},
+   "source": [
+    "- **Shape do dataset:** Quantidade de linhas e colunas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "9b7dc5b1-a48d-44b3-a0da-bb375f2022c2",
@@ -713,6 +751,14 @@
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f922661-b1b6-4b3d-8067-cc3ffdaae7d9",
+   "metadata": {},
+   "source": [
+    "- **Tipos de dados:** Inspeção dos tipos de cada coluna"
    ]
   },
   {
@@ -766,6 +812,14 @@
    ],
    "source": [
     "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0e1a9bc-02a2-4e11-9c42-5306127fe076",
+   "metadata": {},
+   "source": [
+    "- **Sumário estatístico:** Estatísticas descritivas para variáveis numéricas"
    ]
   },
   {
@@ -1079,6 +1133,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82d763a8-c031-47aa-9554-29fc29648ee3",
+   "metadata": {},
+   "source": [
+    "- **Valores ausentes:** Verificação de colunas com dados faltantes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "183e0296-e7a3-4f07-becd-fa093bf2226c",
@@ -1129,6 +1191,14 @@
    ],
    "source": [
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0789e3af-ec87-4fb4-99ed-96ac922d4946",
+   "metadata": {},
+   "source": [
+    "- **Valores únicos:** Contagem de valores únicos por coluna"
    ]
   },
   {
@@ -1186,6 +1256,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "463c9c5c-2833-410d-a582-88747fb00f0a",
+   "metadata": {},
+   "source": [
+    "## 4. Identificação de Variáveis Categóricas\n",
+    "- Inicialmente, foram consideradas como candidatas a categóricas as variáveis com até 20 valores únicos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "2f397659-a47b-4b8b-ace3-d94fe6586e6d",
@@ -1217,6 +1296,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97a47fde-3551-47ad-863a-1838b137b5d0",
+   "metadata": {},
+   "source": [
+    "- Complementarmente, variáveis do tipo `object` ou que representam categorias relevantes para o negócio foram incluídas manualmente"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "9a4e5d48-c5d6-48e4-a631-ffba5f777a4d",
@@ -1229,6 +1316,14 @@
     "    'estado_cliente',\n",
     "]\n",
     "categorical_variables = list(set(categorical_candidates + categorical_manual))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "405e610b-c632-4456-b0a7-eac7684018c8",
+   "metadata": {},
+   "source": [
+    "- O critério misto (automático + manual) foi adotado para garantir que variáveis importantes não fossem descartadas apenas pelo número de categorias"
    ]
   },
   {
@@ -1420,6 +1515,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c7d6366-92f7-49fe-b6fc-0825ccbc4199",
+   "metadata": {},
+   "source": [
+    "## 5. Visualização das Variáveis\n",
+    "\n",
+    "### 5.1 Variáveis Categóricas\n",
+    "\n",
+    "- Para variáveis com muitas categorias, foram exibidas apenas as 10 mais frequentes, tanto em tabelas quanto em gráficos\n",
+    "- Os gráficos foram organizados em subplots para facilitar a comparação visual\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "aa51b848-ccc3-4690-bb7a-f580d99d90f7",
@@ -1452,6 +1560,16 @@
     "    ax.tick_params(axis='x', rotation=45)\n",
     "\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6783fef5-e4e9-4224-8696-784e414e820a",
+   "metadata": {},
+   "source": [
+    "## Conversão de CEPs\n",
+    "\n",
+    "- As colunas `cep_vendedor` e `cep_cliente` foram convertidas para string, pois CEPs são identificadores e não devem ser tratados como variáveis numéricas\n"
    ]
   },
   {
@@ -1672,6 +1790,16 @@
    ],
    "source": [
     "df[numerical_variables].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "502874f0-e474-4f32-a7ec-6efbc21fb471",
+   "metadata": {},
+   "source": [
+    "### 6.2 Variáveis Numéricas\n",
+    "\n",
+    "- Foram plotados histogramas para todas as variáveis numéricas, organizados em uma grade 3x3"
    ]
   },
   {
