docs: added discussion about plot type choices

--- a/notebooks/01_exploratory_analysis.ipynb
+++ b/notebooks/01_exploratory_analysis.ipynb
@@ -2199,6 +2199,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d2293952-cafc-403a-b35b-b8c06c25d0cb",
+   "metadata": {},
+   "source": [
+    "## Discussão sobre escolhas de plots\n",
+    "\n",
+    "A escolha do tipo de gráfico para cada variável foi feita considerando a natureza dos dados e o objetivo de obter uma visão inicial clara da distribuição de cada atributo. O gráfico de barras foi utilizado para a variável `prestacoes`, que tem poucos valores únicos, pois esse tipo de plot facilita a visualização da frequência de cada categoria, permitindo identificar rapidamente padrões ou valores mais comuns.\n",
+    "O boxplot foi escolhido para variáveis contínuas com muitos valores únicos, como `valor_pagamento`, `preco`, `valor_frete` e `peso_produto`, já que é eficiente para visualizar a mediana, a dispersão dos dados e possíveis outliers.\n",
+    "Já o histograma foi utilizado para variáveis contínuas relacionadas a dimensões de produtos (`comprimento_produto`, `altura_produto`, `largura_produto`), pois ele permite observar a distribuição dos dados ao longo de intervalos, facilitando a identificação de assimetrias, concentrações e possíveis anomalias."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4c9fea3a-fe50-4cef-8409-94b3a950ca0b",
    "metadata": {},
    "source": [
