docs: add discussion about target variable choice

--- a/notebooks/01_exploratory_analysis.ipynb
+++ b/notebooks/01_exploratory_analysis.ipynb
@@ -2329,9 +2329,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6ac14f9-c126-47a2-9073-a83077cf25b7",
+   "metadata": {},
+   "source": [
+    "## Discussão sobre a escolha da Variável Alvo\n",
+    "A variável `score_avaliacao` foi escolhida como alvo dentro desse projeto por refletir diretamente a experiência do cliente. Dentro desse conjunto de dados, a definição de sucesso está associada a avaliações positivas após o recebimento do pedido. Cabe ressaltar a relevância da variável `status_pedido`, que também indica o sucesso na realização de uma compra e é pré-requisito para uma avaliação positiva. No entanto, `status_pedido` está mais relacionada a aspectos operacionais e logísticos, que fogem ao escopo principal deste modelo, voltado para a experiência do cliente. Dessa forma, as análises realizadas a partir deste ponto terão como foco a variável `score_avaliacao`, buscando levantar insights sobre os fatores que influenciam a satisfação do cliente.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b59b8df-2eef-4192-8ba8-488d13246f1e",
+   "id": "7483caee-7e40-4b7f-86d0-bb84623b3063",
    "metadata": {},
    "outputs": [],
    "source": []
