feat: handle missing values and create derived time features - calculated derived time features - adjusted time features for missing events to avoid incorrect calculations - categorical and numerical missing values handled with 'unknown' or median imputation respectively

--- a/notebooks/01_exploratory_analysis.ipynb
+++ b/notebooks/01_exploratory_analysis.ipynb
@@ -2506,9 +2506,324 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba7ac218-18db-4602-83ca-f2cea98b5060",
+   "metadata": {},
+   "source": [
+    "# Tratamento de Valores Nulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "73932a8c-4256-4159-96a1-32fadec26a74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id_pedido                     0\n",
+       "tipo_pagamento                0\n",
+       "prestacoes                    0\n",
+       "valor_pagamento               0\n",
+       "id_cliente                    0\n",
+       "status_pedido                 0\n",
+       "data_hora_pedido              0\n",
+       "pedido_aprovado              15\n",
+       "pedido_com_entregador      1180\n",
+       "pedido_entregue            2363\n",
+       "tempo_entregue_estimado       0\n",
+       "id_avaliacao                  0\n",
+       "score_avaliacao               0\n",
+       "data_avaliacao             4632\n",
+       "data_resposta_avaliacao    4632\n",
+       "id_item                       0\n",
+       "id_vendedor                   0\n",
+       "data_limite_entrega           0\n",
+       "preco                         0\n",
+       "valor_frete                   0\n",
+       "categoria_produto          1620\n",
+       "peso_produto                 18\n",
+       "comprimento_produto          18\n",
+       "altura_produto               18\n",
+       "largura_produto              18\n",
+       "cep_vendedor                  0\n",
+       "cidade_vendedor               0\n",
+       "estado_vendedor               0\n",
+       "id_unica_cliente              0\n",
+       "cep_cliente                   0\n",
+       "cidade_cliente                0\n",
+       "estado_cliente                0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "329848b2-6f4d-4df4-b55c-300773749bb5",
+   "metadata": {},
+   "source": [
+    "- Tratamento de `pedido_aprovado`: valores NaT (not a time) mantidos; criação de flag para indicar se o pedido foi aprovado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "d0dc7a34-7067-4b7c-9c8d-b37a76d89181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"pedido_aprovado_flag\"] = df[\"pedido_aprovado\"].notna().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46ab813d-3ba2-4b39-bc4f-6c2bfda61f32",
+   "metadata": {},
+   "source": [
+    "- Tratamento de `pedido_com_entregador`: valores NaT mantidos para evitar perda de dados e criação de flag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "5518fa0d-c37b-4dd8-abc4-252a825835a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"pedido_com_entregador_flag\"] = df[\"pedido_com_entregador\"].notna().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64f6285a-d828-4287-a9a3-a0e6f213bfcb",
+   "metadata": {},
+   "source": [
+    "- Tratamento de `pedido_entregue`: valores NaT mantidos e criação de flag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "8f5a3efc-cade-4a4f-afb0-f3111add2d59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"pedido_entregue_flag\"] = df[\"pedido_entregue\"].notna().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea1b0b0e-56aa-4e36-a178-b704c2428221",
+   "metadata": {},
+   "source": [
+    "- Tratamento de `data_avaliacao`: NaT mantido pois uma não avaliação pode ser relevante"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "e3e81ce3-0fa8-4f3a-a501-e13da1888ad4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"avaliou_pedido\"] = df[\"data_avaliacao\"].notna().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a173a94-9ec9-4737-adce-7bbb6d03d7c4",
+   "metadata": {},
+   "source": [
+    "- Tratamento de `data_resposta_avaliacao`: NaT mantido"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "825fe8bd-942e-46d6-8555-6ef720365d41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"respondeu_avaliacao\"] = df[\"data_resposta_avaliacao\"].notna().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "565756eb-4977-45c1-8858-a5a7398d17a6",
+   "metadata": {},
+   "source": [
+    "- Tratamento de `categoria_produto`: dados faltantes preenchidos com `desconhecido` para evitar perda de dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "13691cd7-b9cd-4fbc-a1f4-907dce63085b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"categoria_produto\"].fillna(\"desconhecido\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23293cdd-0bf0-4415-a48d-14a7518237a7",
+   "metadata": {},
+   "source": [
+    "- Tratamento dos atributos físicos do produto: variáveis numéricas passadas para uma lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "f192acae-7721-4af3-bcb0-e4afa4c47226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical_columns = [\n",
+    "    \"peso_produto\",\n",
+    "    \"comprimento_produto\",\n",
+    "    \"altura_produto\",\n",
+    "    \"largura_produto\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2366c96e-41f2-4990-8ac9-c0ca38449c4d",
+   "metadata": {},
+   "source": [
+    "- Imputação com a mediana de cada coluna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "bb1b00b0-ed15-4d0d-84e5-8226823c25f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for column in numerical_columns:\n",
+    "    median = df[column].median()\n",
+    "    df[column].fillna(median, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f62ebcfb-8f35-4ca7-a74d-861665cf1aed",
+   "metadata": {},
+   "source": [
+    "- Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe03be65-2777-473f-89cd-03d78eb964b3",
+   "metadata": {},
+   "source": [
+    "    - Cálculo de tempos de entrega e atraso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "0bb8c4c7-f5b4-4c1e-b8e5-79db4edce6b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"tempo_entrega_real\"] = (df[\"pedido_entregue\"] - df[\"pedido_aprovado\"]).dt.total_seconds() / 3600\n",
+    "df[\"tempo_entrega_estimado\"] = (df[\"tempo_entregue_estimado\"] - df[\"pedido_aprovado\"]).dt.total_seconds() / 3600\n",
+    "df[\"atraso_entrega_horas\"] = df[\"tempo_entrega_real\"] - df[\"tempo_entrega_estimado\"]\n",
+    "df[\"pedido_atrasado\"] = (df[\"atraso_entrega_horas\"] > 0).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1012b8aa-0dd3-466b-a061-57229b8f99c3",
+   "metadata": {},
+   "source": [
+    "    - Ajuste para pedidos não entregues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "9e57a813-806f-425a-83b3-9679f15046d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df[\"pedido_entregue_flag\"] == 0, \"tempo_entrega_real\"] = None\n",
+    "df.loc[df[\"pedido_entregue_flag\"] == 0, \"atraso_entrega_horas\"] = None\n",
+    "df.loc[df[\"pedido_entregue_flag\"] == 0, \"pedido_atrasado\"] = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbe7007a-3652-42a7-9aca-e7faa7e0f2de",
+   "metadata": {},
+   "source": [
+    "    - Cálculo de tempos relacionados à aprovação e avaliação"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27f2dd3c-1e5f-4de9-a73e-63a3cb6d8f57",
+   "id": "1c604c86-e1b9-4eac-bfdc-f9db048c9d95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"tempo_ate_aprovacao\"] = (\n",
+    "    df[\"pedido_aprovado\"] - df[\"data_hora_pedido\"]\n",
+    ").dt.total_seconds() / 3600\n",
+    "\n",
+    "df[\"tempo_entrega_para_avaliacao\"] = (\n",
+    "    df[\"data_avaliacao\"] - df[\"pedido_entregue\"]\n",
+    ").dt.total_seconds() / 3600\n",
+    "\n",
+    "df[\"tempo_resposta_avaliacao\"] = (\n",
+    "    df[\"data_resposta_avaliacao\"] - df[\"data_avaliacao\"]\n",
+    ").dt.total_seconds() / 3600\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "154a904b-ab25-4346-a3c9-7aeb668347f9",
+   "metadata": {},
+   "source": [
+    "    - Ajuste de tempos para eventos ausentes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "9ef1f094-d5f8-48c1-bef8-69f030a3baa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df[\"pedido_aprovado_flag\"] == 0, \"tempo_ate_aprovacao\"] = None\n",
+    "df.loc[df[\"avaliou_pedido\"] == 0, \"tempo_entrega_para_avaliacao\"] = None\n",
+    "df.loc[df[\"respondeu_avaliacao\"] == 0, \"tempo_resposta_avaliacao\"] = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3471d49a-ae3b-42a4-b427-179b1d933d3c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e2a88b6-3090-43fd-854b-41d9bddbeed9",
    "metadata": {},
    "outputs": [],
    "source": []
