docs: add discussion about missing values handle choices

--- a/notebooks/01_exploratory_analysis.ipynb
+++ b/notebooks/01_exploratory_analysis.ipynb
@@ -2776,7 +2776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "id": "1c604c86-e1b9-4eac-bfdc-f9db048c9d95",
    "metadata": {},
    "outputs": [],
@@ -2818,7 +2818,10 @@
    "cell_type": "markdown",
    "id": "3471d49a-ae3b-42a4-b427-179b1d933d3c",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Discussão sobre as escolhas para o tratamento de valores nulos\n",
+    "Valores nulos em datas (`pedido_aprovado`, `pedido_entregue`, `data_avaliacao`, etc.) foram mantidos como NaT, e flags binárias foram criadas para indicar a presença do evento, transformando ausência em informação. Colunas categóricas com nulos foram preenchidas com \"desconhecido\" e atributos numéricos com poucos nulos receberam a mediana para preservar a distribuição original e evitar distorção por outliers. Features derivadas de tempo (tempo até aprovação, tempo de entrega, atraso, tempo até avaliação e resposta) foram criadas para capturar padrões temporais relevantes à satisfação do cliente. Essa abordagem preserva a informação original e permite que o modelo aprenda relações importantes para prever o score de avaliação."
+   ]
   },
   {
    "cell_type": "code",
