docs: adjust Cohen's Kappa score

--- a/notebooks/01_exploratory_analysis.ipynb
+++ b/notebooks/01_exploratory_analysis.ipynb
@@ -1898,12 +1898,12 @@
     {
      "data": {
       "text/plain": [
-       "['score_avaliacao',\n",
-       " 'status_pedido',\n",
-       " 'cidade_cliente',\n",
+       "['categoria_produto',\n",
+       " 'score_avaliacao',\n",
        " 'estado_cliente',\n",
-       " 'categoria_produto',\n",
-       " 'tipo_pagamento']"
+       " 'cidade_cliente',\n",
+       " 'tipo_pagamento',\n",
+       " 'status_pedido']"
       ]
      },
      "execution_count": 33,
@@ -2856,12 +2856,12 @@
     {
      "data": {
       "text/plain": [
-       "['score_avaliacao',\n",
-       " 'status_pedido',\n",
-       " 'cidade_cliente',\n",
+       "['categoria_produto',\n",
+       " 'score_avaliacao',\n",
        " 'estado_cliente',\n",
-       " 'categoria_produto',\n",
-       " 'tipo_pagamento']"
+       " 'cidade_cliente',\n",
+       " 'tipo_pagamento',\n",
+       " 'status_pedido']"
       ]
      },
      "execution_count": 65,
@@ -3801,12 +3801,12 @@
     {
      "data": {
       "text/plain": [
-       "['score_avaliacao',\n",
-       " 'status_pedido',\n",
-       " 'cidade_cliente',\n",
+       "['categoria_produto',\n",
+       " 'score_avaliacao',\n",
        " 'estado_cliente',\n",
-       " 'categoria_produto',\n",
-       " 'tipo_pagamento']"
+       " 'cidade_cliente',\n",
+       " 'tipo_pagamento',\n",
+       " 'status_pedido']"
       ]
      },
      "execution_count": 93,
@@ -3845,11 +3845,11 @@
     {
      "data": {
       "text/plain": [
-       "['status_pedido',\n",
-       " 'cidade_cliente',\n",
+       "['categoria_produto',\n",
        " 'estado_cliente',\n",
-       " 'categoria_produto',\n",
-       " 'tipo_pagamento']"
+       " 'cidade_cliente',\n",
+       " 'tipo_pagamento',\n",
+       " 'status_pedido']"
       ]
      },
      "execution_count": 95,
@@ -3973,11 +3973,11 @@
     {
      "data": {
       "text/plain": [
-       "['status_pedido',\n",
-       " 'cidade_cliente',\n",
+       "['categoria_produto',\n",
        " 'estado_cliente',\n",
-       " 'categoria_produto',\n",
-       " 'tipo_pagamento']"
+       " 'cidade_cliente',\n",
+       " 'tipo_pagamento',\n",
+       " 'status_pedido']"
       ]
      },
      "execution_count": 98,
@@ -4220,11 +4220,11 @@
        "tempo_ate_aprovacao               0\n",
        "atraso_entrega_horas_corrigido    0\n",
        "pedido_atrasado_corrigido         0\n",
-       "status_pedido                     0\n",
-       "cidade_cliente                    0\n",
-       "estado_cliente                    0\n",
        "categoria_produto                 0\n",
+       "estado_cliente                    0\n",
+       "cidade_cliente                    0\n",
        "tipo_pagamento                    0\n",
+       "status_pedido                     0\n",
        "score_avaliacao                   0\n",
        "dtype: int64"
       ]
@@ -5457,7 +5457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 136,
    "id": "690bd554-4f5d-4301-bd46-1bf009c041c0",
    "metadata": {},
    "outputs": [],
@@ -5468,7 +5468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 137,
    "id": "247bfae5-0c4e-486d-a22c-3e0636d43f90",
    "metadata": {},
    "outputs": [
@@ -5504,7 +5504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 138,
    "id": "47362722-9862-4ce1-8a88-df828bd469d5",
    "metadata": {},
    "outputs": [
@@ -5547,7 +5547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 139,
    "id": "62f84ce4-7617-45f4-91ed-15bd78fa91b1",
    "metadata": {},
    "outputs": [
@@ -5573,7 +5573,7 @@
    "metadata": {},
    "source": [
     "### Relatório sobre performance do modelo\n",
-    "O modelo RandomForest treinado para prever a satisfação dos clientes (score de avaliação) apresentou boa performance geral, com acurácia de 83% e Cohen’s Kappa de 0.776, indicando forte concordância ajustada pelo acaso. A análise da matriz de confusão normalizada mostra que o modelo acerta melhor nas classes extremas (1 e 5), enquanto as classes intermediárias (3 e 4) apresentam maior confusão. As features mais importantes refletem padrões temporais e comportamentais do pedido, sugerindo que o modelo captura bem relações relevantes à satisfação do cliente. Observa-se que os insights levantados durante a análise exploratória, como a relação entre tempo de entrega, atraso e satisfação, se confirmam na importância das variáveis do modelo, reforçando a validade das conclusões iniciais."
+    "O modelo RandomForest treinado para prever a satisfação dos clientes (score de avaliação) apresentou boa performance geral, com acurácia de 83% e Cohen’s Kappa de 0.788, indicando forte concordância ajustada pelo acaso. A análise da matriz de confusão normalizada mostra que o modelo acerta melhor nas classes extremas (1 e 5), enquanto as classes intermediárias (3 e 4) apresentam maior confusão. As features mais importantes refletem padrões temporais e comportamentais do pedido, sugerindo que o modelo captura bem relações relevantes à satisfação do cliente. Observa-se que os insights levantados durante a análise exploratória, como a relação entre tempo de entrega, atraso e satisfação, se confirmam na importância das variáveis do modelo, reforçando a validade das conclusões iniciais."
    ]
   },
   {
